[package]
name = "fairblock-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmos-sdk-proto = { version = "0.23.0", default-features = false }
prost = { version = "0.13.1", default-features = false, features = ["std"] }
prost-types = { version = "0.13.1", default-features = false }
tonic = { version = "0.12.1", default-features = false, features = ["codegen", "prost"] }

[features]
default = ["grpc"]
grpc = []
